[gd_scene load_steps=6 format=2]

[ext_resource path="res://big_asteroid.gd" type="Script" id=1]
[ext_resource path="res://assets/art/asteroids/big_asteroid.png" type="Texture" id=2]
[ext_resource path="res://assets/art/asteroids/big_resource.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "resource",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 103.433

[node name="big_asteroid" type="Area2D"]
collision_layer = 8
collision_mask = 15
script = ExtResource( 1 )

[node name="asteroid_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "resource"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="lifetime_timer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true

[node name="message_timer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_big_asteroid_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_big_asteroid_body_entered"]
[connection signal="timeout" from="lifetime_timer" to="." method="_on_lifetime_timer_timeout"]
[connection signal="timeout" from="message_timer" to="." method="print_status"]
